--- a/work1/index.html
+++ b/work1/index.html
@@ -1,8 +1,8 @@
-<htm>
+<html>
 <body>
     <script>
         alert('金程的第一个网页程序')
     </script>
     <a href="javascript:alert('Hello');">test</a>
 </body>
-</htm>
+</html>
