--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
 <html>
-
     <head>
-    <meta charset="UTF-8">
-    <script type="text/javascript">
-          function sasa_prompt() {
-              var dazai=prompt("","");
-              console.log("大仔说:",dazai); 
-          }
-         function disp_prompt() {
-              var xiaozai=prompt("","");
-              console.log("小仔说:",xiaozai);
-
-         }
-
-    </script>
-   </head>
+        <meta charset="UTF-8">
+        <title>金程的《javascript web前端开发》 课程作业</title>
+    </head>
     <body>
-        <input type="button"  onclick="sasa_prompt()" value="大仔说"/>
-        <input type="button"  onclick="disp_prompt()" value="小仔说"/>
+        <p>金程的《javascript web前端开发》 课程作业</p>
+        <a href='work1/index.html'>work1 开发环境安装</a><br>
+        <a href='work2/index.html'>work2 简单网页任务</a><br>
+        <a href='work2/index.html'>work2-1 简单网页聊天</a><br>          
+        <a href='work3/index.html'>work3 js基本语法</a><br>
+        <a href='work4/index.html'>work4 js流程控制</a><br>
+        持续更新中。。。。。。
     </body>
-    
 </html>
