--- a/work3/index.html
+++ b/work3/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <mate charset="UTF-8">
+        <meta charset="UTF-8">
         <title>金程的计算圆的周长和面积</title>
     </head>
     <body>
