--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <a href='work2/index2.html'>work2-1 简单网页聊天</a><br>          
         <a href='work3/index.html'>work3 js基本语法</a><br>
         <a href='work4/index.html'>work4 js流程控制</a><br>
+        <a href='work5/index.html'>work5 js循环语句程序</a><br>
         持续更新中。。。。。。
     </body>
 </html>
