--- a/work8/index.html
+++ b/work8/index.html
@@ -19,5 +19,5 @@
         <div id="goldbach"></div>
     </body>
     <script src="index.js"></script>
-    <script src="golbach.js"></script>
+    <script src="goldbach.js"></script>
 </html>
