--- a/work12/index1.html
+++ b/work12/index1.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <div class="selyear">
-            <span class="preyear" id="preyear" data-year="2000" onclick="setCalendar(this.dataset.yera)"></span>
+            <span class="preyear" id="preyear" data-year="" onclick="setCalendar(this.dataset.yera)"></span>
             <span id="curyear"></span>
-            <span class="nextyear" id="nextyear" data-year="2030" onclick="setCalendar(this.dataset.yera)"></span>
+            <span class="nextyear" id="nextyear" data-year="" onclick="setCalendar(this.dataset.yera)"></span>
         <div class="box" id="cal"></div>
     </body>
     <script src="calendar.js"></script>
