--- a/work12/index.html
+++ b/work12/index.html
@@ -1,16 +1,28 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>金程的万年历</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-    </head>
-    <body>
-        <div class="selyear">
-            <span class="preyear" id="preyear" data-year="2000" onclick="setCalendar(this.dataset.yera)"></span>
-            <span id="curyear"></span>
-            <span class="nextyear" id="nextyear" data-year="2030" onclick="setCalendar(this.dataset.yera)"></span>
-        <div class="box" id="cal"></div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>金程的万年历</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+    <div class="selyear">
+        <span class="preyear" id="preyear" data-year=" " onclick="setCalendar(this.dataset.year)"></span>
+        <span id="curyear"></span>
+        <span class="nextyear" id="nextyear" data-year=" " onclick="setCalendar(this.dataset.year)"></span>
+    <div class="box" id="cal"></div>
+    </body>    
     <script src="calendar.js"></script>
     <script src="index.js"></script>
-</html>
+    <script>
+    var year1 = new Date().getFullYear()
+        var pre = year1-1
+        var next = year1+1
+        document.getElementById('curyear').setAttribute('data-year', year);
+        document.getElementById('preyear').setAttribute('data-year', pre);
+        document.getElementById('nextyear').setAttribute('data-year', next);
+        document.getElementById('curyear').innerText = year
+        document.getElementById('preyear').innerText = "<<"+pre
+        document.getElementById('nextyear').innerText = next+ ">>"
+    </script>
+    </html>       
+    
