--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <a href='work10/index.html'>work10 猴子选大王</a><br>
         <a href='work12/index.html'>work12 万年历</a><br>
         <a href='work13/index.html'>work13 表单生成器</a><br>
+        <a href='work14/index.html'>work14 限时秒杀</a><br>
+        <a href='work14/index1.html'>work14-1 红绿灯</a><br>
         持续更新中。。。。。。
     </body>
 </html>
