--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href='work13/index.html'>work13 表单生成器</a><br>
         <a href='work14/index.html'>work14 限时秒杀</a><br>
         <a href='work14/index1.html'>work14-1 红绿灯</a><br>
+        <a href='work14/index2.html'>work14-2 整点秒杀</a><br>
         持续更新中。。。。。。
     </body>
 </html>
