--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <a href='work14/index1.html'>work14-1 红绿灯</a><br>
         <a href='work14/index2.html'>work14-2 整点秒杀</a><br>
         <a href='work15/index.html'>work15 购物车</a><br>
+        <a href='work16/index.html'>work16 放大镜</a><br>
+        <a href='work16/index1.html'>work16-1 小球快跑</a><br>
+        <a href='work16/index2.html'>work16-2 随便飞</a><br>
         持续更新中。。。。。。
-    </body>
+    </body> 
 </html>
