--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href='work16/index.html'>work16 放大镜</a><br>
         <a href='work16/index1.html'>work16-1 小球快跑</a><br>
         <a href='work16/index2.html'>work16-2 随便飞</a><br>
+        <a href='work17/index.html'>work17 表单验证</a><br>
         持续更新中。。。。。。
     </body> 
 </html>
