--- a/work17/index.html
+++ b/work17/index.html
@@ -27,24 +27,21 @@
                 </tr>
                 <tr>
                     <th>确认密码: </th>
-                    <td><input type="password" name="repwd" autocomplete='new-password' placeholder="请再次输入密码进行确认">
-                    </td>
+                    <td><input type="password" name="repwd" autocomplete='new-password' placeholder="请再次输入密码进行确认"></td>
                     <td>
                         <div></div>
                     </td>
                 </tr>
                 <tr>
                     <th>手机号码: </th>
-                    <td><input type="tel" placeholder="13、14、15、17、18开头的11位手机号">
-                    </td>
+                    <td><input type="text" name="tel" placeholder="13、14、15、17、18开头的11位手机号"></td>
                     <td>
                         <div></div>
                     </td>
                 </tr>
                 <tr>
                     <th>电子邮箱 :</th>
-                    <td><input type="text" name="email" placeholder="用户名@域名 （域名后缀至少2个字符）">
-                    </td>
+                    <td><input type="text" name="email" placeholder="用户名@域名(域名后缀至少2个字符)"></td>
                     <td>
                         <div></div>
                     </td>
