--- a/work17/index.html
+++ b/work17/index.html
@@ -10,7 +10,7 @@
         <form>
             <table>
                 <tr>
-                    <th>用户名称: </th>
+                    <th>用户名称：</th>
                     <td><input type="text" name="username" autocomplete='new-password' placeholder="长度4~12，英文大小写字母">
                     </td>
                     <td>
@@ -18,7 +18,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>密   码:</th>
+                    <th>密    码：</th>
                     <td><input type="password" name="pwd" autocomplete='new-password' placeholder="长度6~20，大小写字母、数字或下划线">
                     </td>
                     <td>
@@ -26,22 +26,22 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>确认密码: </th>
+                    <th>确认密码：</th>
                     <td><input type="password" name="repwd" autocomplete='new-password' placeholder="请再次输入密码进行确认"></td>
                     <td>
                         <div></div>
                     </td>
                 </tr>
                 <tr>
-                    <th>手机号码: </th>
+                    <th>手机号码：</th>
                     <td><input type="text" name="tel" placeholder="13、14、15、17、18开头的11位手机号"></td>
                     <td>
                         <div></div>
                     </td>
                 </tr>
                 <tr>
-                    <th>电子邮箱 :</th>
-                    <td><input type="text" name="email" placeholder="用户名@域名(域名后缀至少2个字符)"></td>
+                    <th>电子邮箱：</th>
+                    <td><input type="text" name="email" placeholder="用户名@域名（域名后缀至少2个字符）"></td>
                     <td>
                         <div></div>
                     </td>
@@ -50,7 +50,7 @@
                     <td colspan="3"><input type="submit" value="注册"></td>
                 </tr>
             </table>
-        </form>     
+        </form>
     </div>
 </body>
 <script src="index.js"></script>
