--- a/work18/index1.html
+++ b/work18/index1.html
@@ -9,6 +9,8 @@
     <div class="title">金程的ajax无刷新分页查看评论</div>
     <div id="progress" class="progress"></div>
     <div class="box">
+        <div class="title">查看评论</div>
+        <div id="comment" class="comment"></div>
     <div class="pagelist">
         <p>当前是第<span id="page_num">1</span>页</p>
         <button id="page_first">首页</button>
