--- a/work19/index1.html
+++ b/work19/index1.html
@@ -1,5 +1,5 @@
+
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>金程的进度条上传</title>
@@ -11,10 +11,10 @@
         <input id="upload" type="button" value="上传">
     </form>
     <p>
-        上次进度: <span class="progress"><i id="bar"></i></span>
+        上传进度：<span class="progress"><i id="bar"></i></span>
         <span id="per">0%</span>
     </p>
     <p id="download"></p>
 </body>
-<script src="index.js"></script>
+<script src="index1.js"></script>
 </html>
